# rp2350-rust-template

./: Cargo.toml  LICENSE  README.md  build.rs  cargo-generate.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
cargo-generate/: Cargo.toml  config.toml  init-script.rhai  launch.json  tasks.json
src/: main.rs
