[package]
name = "rp2350-template"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
"cargo-binutils" = { version = "*" }  

[dependencies]
# Necessary Dependancies
cortex-m = "0.7.2" # Low-level access to Cortex-M processors
cortex-m-rt = "0.7.3" # Cortex-M startup code and minimal runtime
cortex-m-rtic = "1.1.4" # Real-Time Interrupt-driven Concurrency
critical-section = { version = "1.0.0" } # Allows for critical sections in the code, like disabling interrupts

# RP2350 Specific Dependencies
pio = "*" # Support for both rp2040 and rp235x PIO 
pio-proc = "*" # Supports PIO state machine assembly creation at compile time
rp235x-hal = { git = "https://github.com/rp-rs/rp-hal.git", version = "0.2.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
    "defmt",
] }

# Debug (Only for debug builds, controlled by features)
defmt = { version = "0.3.8", optional = true } # Debug formatting
defmt-rtt = { version = "0.4.1", optional = true}
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true } 

# Panic handler for release (always included)
panic-halt = "1.0.0"

# HAL crates managed by HAL team
embedded-hal = "1.0.0" # Hardware Abstraction Layer, blocking
embedded-hal-bus = "*"

# Other Dependencies (Optional)
# fugit = "0.3.6"
# futures = { version = "0.3.30", default-features = false } #Simple async/await support
heapless = "0.8.0" # Heapless data structures w/o needing heap allocation
static_cell = "2.1.0" # Statically allocate memory at compile time w/o alloc or std

# Features for Debugging
[features]
default = ["debug"] 
debug = ["defmt", "defmt-rtt", "panic-probe"] # Debugging features

# The following define the build profiles for the project
# cargo build/run
[profile.dev]
codegen-units = 1
debug-assertions = true
incremental = false
lto = true
panic = 'unwind'
opt-level = 0
debug = true
overflow-checks = true
rpath = false

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false